# voron-bootsplash

./: README.md  bootsplash.py  pyproject.toml
voron-1024x600/: voron.plymouth
voron-480x320/: voron.script
