[project]
name = "bootsplash"
version = "0.1.0"
description = "A command-line utility to extract frames from MP4 videos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "opencv-python>=4.9.0",
    "pillow>=10.2.0",
]

[tool.uv]
# Ensures a repeatable environment by locking dependencies
managed = true
